# Uni-Lab-OS

./: .gitignore  MANIFEST.in  README.md  package.xml  setup.cfg  setup.py  unilabos-linux-64.yaml  unilabos-osx-64.yaml  unilabos-osx-arm64.yaml  unilabos-win64.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: conf.py  index.md  intro.md
docs/boot_examples/: index.md  liquid_handler.md  organic_synthesis.md
docs/concepts/: 01-communication-instruction.md  02-topology-and-chemputer-compile.md  overview.md
docs/developer_guide/: action_includes.md  actions.md  add_action.md  add_device.md  add_protocol.md  add_yaml.md  device_driver.md
docs/user_guide/: configuration.md  installation.md  launch.md
recipes/: conda_build_config.yaml
recipes/ros-humble-unilabos-msgs/: bld_ament_cmake.bat  recipe.yaml
recipes/ros2_csharp/: activate.bat  deactivate.bat  meta.yaml
recipes/unilabos/: clean_build_dir.py  recipe.yaml
ros2_csharp/: README.md  ros2_humble.repos
ros2_csharp/src/ros_driver/: CMakeLists.txt  DeviceActionServer.cs  DeviceNode.cs  MockGripper.cs  Program.cs  PropertyPublisher.cs  package.xml
ros2_csharp/src/ros_driver/utils/: MessageConverter.cs  Yaml.cs
test/commands/: resource_add.md
test/experiments/: Grignard_flow_batchreact_single_pumpvalve.json  HPLC.json  HT_hiwo.json  deis_control_config.yaml  devices.json  lidocaine-graph.json  mock_reactor.json  plr_test.json  plr_test_converted.json  test.json  test_copy.json
test/ros/msgs/: __init__.py  test_basic.py  test_conversion.py  test_mapping.py  test_runner.py
unilabos/app/: backend.py  controler.py  main.py  model.py  mq.py  oss_upload.py
unilabos/app/web/: __init__.py  api.py  client.py  pages.py  server.py
unilabos/compile/: __init__.py  agv_transfer_protocol.py  clean_protocol.py  evacuateandrefill_protocol.py  evaporate_protocol.py  pump_protocol.py  separate_protocol.py
unilabos/config/: config.py
unilabos/controllers/: __init__.py  eis_model.py
unilabos/device_comms/: rpc.py
unilabos/device_comms/modbus_plc/: client.py  example_json.json  server.py
unilabos/device_mesh/: resource_visalization.py  view_robot.rviz
unilabos/devices/UV_test/: fuxiang2.py
unilabos/devices/agv/: agv_navigator.py  pose.json  robotiq_gripper.py  ur_arm_task.py
unilabos/devices/bioyond/: bioyond.py  by_test.py  param.txt  s.py  w.txt
unilabos/devices/bioyong/: bioyong.py
unilabos/devices/cnc/: grbl_async.py  grbl_sync.py  mock.py
unilabos/devices/gripper/: mock.py  rmaxis_v4.py
unilabos/devices/heaterstirrer/: dalong.py
unilabos/devices/hplc/: AgilentHPLC.py
unilabos/devices/laiyu_add_solid/: laiyu.py
unilabos/devices/liquid_handling/: action_definition.py  revvity.py
unilabos/devices/motor/: Consts.py  FakeSerial.py  Grasp.py  Utils.py  iCL42.py  test.py
unilabos/devices/platereader/: NivoDriver.py  PlayerUtil.py
unilabos/devices/pump_and_valve/: runze_async.py  runze_backbone.py  solenoid_valve.py  solenoid_valve_mock.py  vacuum_pump_mock.py
unilabos/devices/raman_uv/: home_made_raman.py
unilabos/devices/ros_dev/: liquid_handler_joint_publisher.py
unilabos/devices/rotavap/: rotavap_one.py
unilabos/devices/separator/: homemade_grbl_conductivity.py
unilabos/devices/temperature/: chiller.py  prototype_sensor.py  sensor.py  sensor_node.py
unilabos/devices/zhida_hplc/: possible_status.txt  zhida.py  zhida_test_1.csv
unilabos/messages/: __init__.py
unilabos/registry/: registry.py
unilabos/registry/device_comms/: modbus_ioboard.yaml  serial.yaml
unilabos/registry/devices/: characterization_optic.yaml  laiyu_add_solid.yaml  liquid_handler.yaml  organic_miscellaneous.yaml  pump_and_valve.yaml  robot_agv.yaml  robot_arm.yaml  robot_gripper.yaml  robot_linear_motion.yaml  sim_nodes.yaml  temperature.yaml  vacuum_and_purge.yaml  work_station.yaml  (+1 more)
unilabos/resources/: graphio.py  registry.py
unilabos/ros/: device_node_wrapper.py  initialize_device.py  main_slave_run.py
unilabos/utils/: __init__.py  async_util.py  banner_print.py  cls_creator.py  decorator.py  import_manager.py  log.py  pywinauto_util.py  tools.py  type_check.py
unilabos/web/: __init__.py  api.py  client.py  pages.py  server.py
unilabos_msgs/: CMakeLists.txt  README.md  package.xml
unilabos_msgs/action/: AGVTransfer.action  Clean.action  DPLiquidHandlerAddLiquid.action  DPLiquidHandlerCustomDelay.action  DPLiquidHandlerMix.action  DPLiquidHandlerMoveTo.action  DPLiquidHandlerRemoveLiquid.action  DPLiquidHandlerSetTiprack.action  DPLiquidHandlerTouchTip.action  DPLiquidHandlerTransferLiquid.action  EvacuateAndRefill.action  Evaporate.action  FloatSingleInput.action  HeatChill.action  HeatChillStart.action  HeatChillStop.action  IntSingleInput.action  LiquidHandlerAspirate.action  LiquidHandlerDiscardTips.action  LiquidHandlerDispense.action  LiquidHandlerDropTips.action  LiquidHandlerDropTips96.action  LiquidHandlerMoveLid.action  LiquidHandlerMovePlate.action  LiquidHandlerMoveResource.action  LiquidHandlerPickUpTips.action  LiquidHandlerPickUpTips96.action  LiquidHandlerReturnTips.action  LiquidHandlerReturnTips96.action  LiquidHandlerStamp.action  LiquidHandlerTransfer.action  Point3DSeparateInput.action  PumpTransfer.action  ResourceCreateFromOuter.action  SendCmd.action  Separate.action  SolidDispenseAddPowderTube.action  Stir.action  StrSingleInput.action  WorkStationRun.action
unilabos_msgs/msg/: Resource.msg  State.msg
unilabos_msgs/srv/: ResourceGet.srv  ResourceList.srv  ResourceUpdate.srv  Stop.srv
(+72 files in other folders)
